<resources>
    <string name="app_name">Taxi</string>
    <string name="taxi_splash_screen">Taxi splash screen</string>
    <string name="i_am_a_passenger">I am a passenger</string>
    <string name="i_am_a_driver">I am a driver</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sing_up">Sign up</string>
    <string name="tap_to_log_in">Tap to log in</string>
    <string name="passenger_sign_up">Passenger sign up</string>
    <string name="driver_sign_up">Driver sign up</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="title_activity_passenger_maps">Map</string>
</resources>